Initial Testing with Boolean Algebra

--- a/Assignments/Minimum Dominating Set/docs/paper.tex
+++ b/Assignments/Minimum Dominating Set/docs/paper.tex
@@ -1,7 +1,7 @@
 \documentclass[12pt]{article}
 
 \title{Minimum Dominating Set of a Graph}
-\author{Robert Krency, Regina Thase, Frank Bedokovich}
+\author{Robert Krency, Regina Thase, Frank Bedekovich}
 
 \usepackage{tikz}
 \usepackage{amsmath}
@@ -18,6 +18,10 @@
 
 % Add vertical spacing to tables
 \renewcommand{\arraystretch}{1.4}
+
+% Use Double Spacing for the paper
+\usepackage{setspace}
+\doublespacing 
 
 % Macros
 \newcommand{\definition}[1]{\underline{\textbf{#1}}}
