--- a/Assignments/Minimum Dominating Set/docs/tex/introduction.tex
+++ b/Assignments/Minimum Dominating Set/docs/tex/introduction.tex
@@ -19,6 +19,11 @@
 In this paper, we explore the Minimum Dominating Set of a Graph and how to find it.
 The Minimum Domianting Set of a Graph is the Set of all nodes such that every node or one of its neighbors is in the set.
 
+There are two basic algorithms for finding a minimum set.
+The first algorithm uses a brute force approach, checking every possible set of vertices.
+The second algorithm uses a greedy approach, using the first available vertex with the highest out-degree.
+The greedy approach does not guarantee a minimum set.
+
 This paper is divided into the following sections. 
 Section 2 contains background information on the Minimum Dominating Set.
 Section 3 contains the algorithms used to solve for the Minimum Dominating Set.
