--- a/Assignments/Minimum Dominating Set/docs/paper.tex
+++ b/Assignments/Minimum Dominating Set/docs/paper.tex
@@ -30,6 +30,12 @@
 
 \maketitle
 
+\vspace{1in}
+
+\subfile{tex/covergraph.tex}
+
+\pagebreak
+
 \begin{multicols*}{2}
   \subfile{tex/introduction.tex}
   \subfile{tex/background.tex}
