--- a/Assignments/Minimum Dominating Set/docs/tex/introduction.tex
+++ b/Assignments/Minimum Dominating Set/docs/tex/introduction.tex
@@ -22,7 +22,7 @@ The Minimum Domianting Set of a Graph is the Set of all nodes such that every no
 This is in demonstration of the time complexity of algorithms, often denoted using Big-O notation ($O(n)$).
 To date, the best known algorithms used to guarantee the minimum dominating set run in exponential scales, of the form $O(2^n)$.
 Solutions however are able to be verified in polynomial time, of the form $O(n^2)$.
-There are several algorithms used to get an approximate answer that run in much smaller scales.
+It is with these two criteria that we classify the Minimum Dominating Set as an \textit{NP-Complete} problem.
 
 In this paper, we explore the algorithm used to find the Minimum Domating Set.
 We also explore an approximating algorithm in order to compare the efficacy of the two, with accuracy and runtime being the major criteria.
