--- a/Assignments/Minimum Dominating Set/docs/tex/background.tex
+++ b/Assignments/Minimum Dominating Set/docs/tex/background.tex
@@ -18,8 +18,9 @@
 
 The Minimum Dominating Set of a Graph is defined as the set of vertices for which each vertex or one of its neighbors is in the set.
 The size of the minimum set will be unique, however there may be multiple sets of that size that are a minimal covering.
-Consider the graph below.
+Consider the following graph:
 
+\vspace{5mm}
 \begin{center}
 \begin{tikzpicture}[node distance={15mm}, thick, main/.style = {draw, circle}] 
     \node[main] (1) {$x_1$};  
@@ -40,12 +41,11 @@ Consider the graph below.
 \end{tikzpicture}
 \end{center}
 
-This graph has minimum dominating sets, $\{x_2,x_4\}$ and $\{x_2,x_7\}$.
 The vertex $x_2$ covers vertices $\{x_1,x_3,x_5,x_6\}$, leaving nodes $x_4$ and $x_7$.
 Either vertex can dominate the other and complete a covering of the graph.
-In this example, both the approximate algorithm and brute force approach would find an equally sized set.
+Thus, this graph has two minimum dominating sets, $\{x_2,x_4\}$ and $\{x_2,x_7\}$.
 
-The next section explores the two algorithmic approaches used in this project.
-
+This problem is computationally difficult, and scales exponentially with the size of the graph.
+The next two sections cover the Brute Force approach and the Approximation approach, respectively.
 
 \end{document}
