--- a/Assignments/Minimum Dominating Set/docs/tex/introduction.tex
+++ b/Assignments/Minimum Dominating Set/docs/tex/introduction.tex
@@ -20,17 +20,11 @@ In this paper, we explore the Minimum Dominating Set of a Graph and how to find 
 The Minimum Domianting Set of a Graph is the Set of all nodes such that every node or one of its neighbors is in the set.
 
 This is in demonstration of the time complexity of algorithms, often denoted using Big-O notation ($O(n)$).
-To date, the best known algorithms used to guarantee the minimum dominating set run in exponential scales, of the form $O(2^n)$.
+To date, the best known algorithms used to guarantee the minimum dominating set are brute force approaches that run in exponential scales, of the form $O(2^n)$.
 Solutions however are able to be verified in polynomial time, of the form $O(n^2)$.
-It is with these two criteria that we classify the Minimum Dominating Set as an \textit{NP-Complete} problem.
+It is with these two criteria that we classify the Minimum Dominating Set problem as an \textit{NP-Complete} problem.
 
-In this paper, we explore the algorithm used to find the Minimum Domating Set.
-We also explore an approximating algorithm in order to compare the efficacy of the two, with accuracy and runtime being the major criteria.
-
-This paper is divided into the following sections. 
-Section 2 contains background information on the Minimum Dominating Set.
-Section 3 contains the algorithms used to solve for the Minimum Dominating Set.
-Section 4 contains experimental data when running the algorithm.
-Section 5 concludes the paper.
+In this paper, we explore a brute force algorithm used to find the Minimum Domating Set.
+We also explore an approximate algorithm in order to compare the efficacy of the two, with accuracy and runtime being the major criteria.
 
 \end{document}
